# tripmind

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh
mcp_tools/: __init__.py  attractions.py  budget.py  cuisine.py  destination_info.py  geocoding.py  hotels.py  restaurants.py  server.py  transport.py  weather.py
prompts/: trip_planner.py
server/: api.py  orchestrator.py  schemas.py
web/: index.html
